# WhateverRed-NETDBG

./: .gitignore  Cargo.toml  Makefile.toml  README.md  config.template.ron
.github/: dependabot.yml
wred-client/: Cargo.toml  index.html
wred-client/assets/: sw.js
wred-client/src/: app.rs  main.rs  requests.rs  style.rs  utils.rs
wred-server/: Cargo.toml
wred-server/src/: lib.rs  log_service.rs  main.rs  routes.rs  state.rs
