[package]
name = "wred-client"
version = "0.1.0"
edition = "2021"
description = "WhateverRed NetDbg Client"
publish = false
resolver = "2"

[package.metadata.bundle]
name = "WRed NetDbg"
identifier = "com.ChefKissInc.WRedNetDbgClient"
copyright = "Copyright 2022 ChefKiss Inc"
category = "public.app-category.utilities"
# icon = ["src/app_icon/icon*.png"]
osx_minimum_system_version = "10.13"

[dependencies]
egui = { git = "https://github.com/emilk/egui", version = "0.19.0", features = [
    "persistence",
    "tracing",
] }
serde = { version = "1.0.145", features = ["derive"] }
postcard = { version = "1.0.2", default-features = false, features = [
    "use-std",
] }
sequence-generator-rust = "0.3.1"
wred-server = { path = "../wred-server", default-features = false }
poll-promise = "0.1.0"
ehttp = { git = "https://github.com/emilk/ehttp", version = "0.2.0" }
timeago = { version = "0.3.1", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { git = "https://github.com/emilk/egui", version = "0.19.0", default-features = false, features = [
    "persistence",
    "wgpu",
    "dark-light",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { git = "https://github.com/emilk/egui", version = "0.19.0", default-features = false, features = [
    "persistence",
    "glow",
    "dark-light",
] }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.60", features = ['Document', "Location"] }
js-sys = "0.3.60"
