[package]
description = "WhateverRed NetDbg Client"
edition = "2021"
name = "wred-client"
publish = false
version = "0.1.0"

[package.metadata.bundle]
category = "public.app-category.utilities"
copyright = "Copyright 2022 ChefKiss Inc"
# icon = ["src/app_icon/icon*.png"]
identifier = "com.ChefKissInc.WRedNetDbgClient"
name = "WRed NetDbg"
osx_minimum_system_version = "10.13"

[dependencies]
eframe = { version = "0.20.1", default-features = false, features = [
    "dark-light",
    "persistence",
    "wgpu",
] }
egui = { version = "0.20.1", features = ["persistence", "tracing"] }
ehttp = { git = "https://github.com/emilk/ehttp", version = "0.2.0" }
poll-promise = "0.2.0"
postcard = { version = "1.0.2", default-features = false, features = [
    "use-std",
] }
sequence-generator-rust = "0.3.1"
serde = { version = "1.0.150", features = ["derive"] }
timeago = { version = "0.4.0", default-features = false }
wred-server = { path = "../wred-server", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["Location", 'Document'] }
