[package]
name = "wred-server"
version = "0.1.0"
edition = "2021"
publish = false
resolver = "2"

[[bin]]
name = "wred-server"
required-features = ["build-binary"]

[features]
default = ["build-binary"]
build-binary = ["actix-files", "actix-web", "postcard", "ron", "tokio"]

[dependencies]
actix-files = { version = "0.6.2", optional = true }
actix-web = { version = "4.2.1", optional = true }
futures = "0.3.24"
postcard = { version = "1.0.2", optional = true, default-features = false, features = [
    "use-std",
] }
ron = { version = "0.8.0", optional = true }
sequence-generator-rust = "0.3.1"
serde = "1.0.145"
tokio = { version = "1.21.2", optional = true, features = ["full"] }
