[package]
edition = "2021"
name = "wred-server"
publish = false
version = "0.1.0"

[[bin]]
name = "wred-server"
required-features = ["build-binary"]

[features]
build-binary = ["actix-files", "actix-web", "postcard", "ron", "tokio"]
default = ["build-binary"]

[dependencies]
actix-files = { version = "0.6.2", optional = true }
actix-web = { version = "4.2.1", optional = true }
postcard = { version = "1.0.2", optional = true, default-features = false, features = [
    "use-std",
] }
ron = { version = "0.8.0", optional = true }
sequence-generator-rust = "0.3.1"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", optional = true, features = ["fs", "rt"] }
